Version 0.1.9
-------------

- dmars: fixed precompiled headers to not recompile everything
- mingw: added dependency tracking
- dmars: fixed subprojects
- don't escape \ in Python expressions
- fixed copy-files on Solaris (Michael Wetherell)


Version 0.1.8
-------------

- gnu: define PLATFORM_UNIX
- gnu: implemented dependencies tracking
- msvc*: use /EHsc instead of /GX, which is deprecated in VC8 (Vadim Zeitlin)
- added scripts for making Debian package (Vadim Zeitlin)
- gnu: fixed <module> targets to not have "lib" prefix in name
- added --quiet option
- gnu,mingw: fixed <threading>multi</threading> to use -pthread or -mthreads
  for compilation and not only linking


Version 0.1.7
-------------

- fixed running under Python 2.2 (Francesco Montorsi)
- fixed handling of "prepend" attribute on <set> command


Version 0.1.6
-------------

- autoconf: MetroWerks compiler support (David Elliott)
- fixed 'fake' preset to define <precomp-headers-location>
- workaround for a bug in aclocal that causes it to die when processing
  AC_BAKEFILE definition in bakefile.m4


Version 0.1.5
-------------

- new format: dmars_smake for DigitalMars's smake (Wlodzimierz ABX Skiba)
- msvc6prj, msevc4prj: change project names to be same as file names
- portability fix for datafiles module (Greg Noel)
- watcom: support <cxx-rtti> (Hans Van Leemputten)
- added <fragment> support to all makefile-based formats
- added category=path hint to options to make it possible to use options
  as argument to <include> etc.
- new format: gnu for GNU toolchain on Unix
- misc portability fixes on Unix (Michael Champigny)
- added BeOS support (thanks to information by Michael Champigny)
- improved performance when generating lots of makefiles using
  bakefile_gen by caching parsed XML files
- autoconf: fixed precompiled headers dependencies in case of multiple targets
- precompiled headers support for dmars and dmars_smake formats
  (based on work by Wlodzimierz ABX Skiba)